# dedalus

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
.cargo/: config.toml
.githooks/: pre-push
.github/workflows/: ci.yml  rust.yml
docs/: FUTURE_IMPROVEMENTS.md
neo4j-platform/: docker-compose.yml
scripts/: download_wikipedia.sh  import-neo4j.sh
src/: analytics.rs  cache.rs  checkpoint.rs  config.rs  content.rs  csv_util.rs  extract.rs  import.rs  index.rs  infobox.rs  lib.rs  main.rs  merge.rs  models.rs  multistream.rs  parser.rs  stats.rs  surrealdb_writer.rs
src/tui/: app.rs  event.rs  logging.rs  mod.rs  runner.rs  ui.rs
tests/: integration_test.rs  test_merge_csvs.rs
