[package]
name = "dedalus"
version = "0.1.0"
edition = "2021"

[dependencies]
bzip2 = { version = "0.6.1" }
serde = { version = "1.0.228", features = ["derive"] }
anyhow = { version = "1.0.100" }
indicatif = { version = "0.18.3" }
clap = { version = "4.5.53", features = ["derive"] }
regex = { version = "1.12.2" }
csv = { version = "1.4.0" }
serde_json = { version = "1.0.148" }
quick-xml = { version = "0.31", features = ["serialize"] }
rayon = { version = "1.11.0" }
once_cell = { version = "1.19" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bincode = "1"
dashmap = "6"
rustc-hash = "2"
neo4rs = "0.9.0-rc.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process"] }
futures = "0.3"
mimalloc = "0.1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
panic = 'abort'
overflow-checks = false
