[package]
name = "dedalus"
version = "0.1.0"
edition = "2024"
description = "A Rust pipeline that extracts Wikipedia dumps into structured graph data with SurrealDB embedded storage"
repository = "https://github.com/real-limoges/dedalus"
license = "MIT"
authors = ["Real Limoges"]
keywords = ["wikipedia", "surrealdb", "graph", "extraction"]
categories = ["command-line-utilities", "database"]
rust-version = "1.94.0"
readme = "README.md"

[dependencies]
anyhow = "1.0.102"
bincode = "1.3.3"
bzip2 = "0.6.1"
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
csv = "1.4.0"
dashmap = "6"
futures = "0.3"
indicatif = "0.18.4"
itoa = "1"
memchr = "2"
mimalloc = "0.1"
once_cell = "1.21.4"
quick-xml = { version = "0.31", features = ["serialize"] }
ratatui = "0.30.0"
rayon = "1.11.0"
regex = "1.12.3"
rustc-hash = "2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
surrealdb = { version = "3.0.4", features = ["kv-rocksdb"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
panic = 'abort'
overflow-checks = false
